<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:contentDescription="@string/viewone_accesibility_logo"
        android:src="@drawable/neu" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1"
        android:text="@string/viewone_introduction"
        android:textSize="20sp" />

    <Button
        android:id="@+id/configbuttonBeep"
        android:layout_weight="0.1"
        android:layout_width="116dp"
        android:layout_height="wrap_content"
        android:text="@string/viewone_continue_key" />

</LinearLayout>